objects/PatientServiceEnrolleeTaskConfig__mdt/PatientServiceEnrolleeTaskConfig__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata contains information related to Task Record Creation values on Patient Service Enrolled Record Creation.</description>
    <label>Patient Service Enrollee Task Config</label>
    <pluralLabel>Patient Service Enrollee Task Config</pluralLabel>
</CustomObject>