objects/PatientServiceEnrolleeTaskConfig__mdt/fields/DaysToReachDueDate__c.field-meta.xml
<CustomField>
    <fullName>DaysToReachDueDate__c</fullName>
    <label>Days To Reach Due Date</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>