objects/PatientServiceEnrolleeTaskConfig__mdt/fields/PatientServiceEnrolleeStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientServiceEnrolleeStatus__c</fullName>
    <label>Patient Service Enrollee Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>