objects/PatientServiceEnrolleeTaskConfig__mdt/fields/TaskPriority__c.field-meta.xml
<CustomField>
    <fullName>TaskPriority__c</fullName>
    <defaultValue>&apos;Normal&apos;</defaultValue>
    <label>Task Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>