objects/PatientServiceEnrolleeTaskConfig__mdt/fields/TaskStatus__c.field-meta.xml
<CustomField>
    <fullName>TaskStatus__c</fullName>
    <label>Task Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>