objects/PatientServiceEnrolleeTaskConfig__mdt/fields/TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>TaskSubject__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>