objects/PatientServiceEnrolleeTaskConfig__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DaysToReachDueDate__c</columns>
    <columns>IsActive__c</columns>
    <columns>PatientServiceEnrolleeStatus__c</columns>
    <columns>TaskPriority__c</columns>
    <columns>TaskStatus__c</columns>
    <columns>TaskSubject__c</columns>
    <columns>TaskType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>